[package]
name = "nonstick"
description = "PAM bindings for Rust"
version = "0.0.1"
authors = ["Paul Fisher <paul@pfish.zone>", "Anthony Nowell <anowell@gmail.com>" ]
repository = "https://hg.pfish.zone/crates/nonstick/"
readme = "README.md"
keywords = ["pam", "ffi", "linux", "authentication"]
license = "MIT"

[lib]
name = "pam"

[dependencies]
libc = "0.2.97"
